--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "license": "MIT",
   "name": "front-end",
   "version": "1.0.0",
   "private": true,
@@ -15,12 +16,20 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.8",
+    "cntl": "^1.0.0",
+    "framer-motion": "^7.2.1",
     "gatsby": "^4.20.0",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^2.20.0",
+    "gatsby-plugin-postcss": "^5.20.0",
+    "gatsby-plugin-react-svg": "^3.1.0",
     "gatsby-plugin-sharp": "^4.20.0",
     "gatsby-source-filesystem": "^4.20.0",
     "gatsby-transformer-sharp": "^4.20.0",
+    "postcss": "^8.4.16",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "tailwindcss": "^3.1.8"
   }
 }
