--- a/package.json
+++ b/package.json
@@ -21,12 +21,17 @@
     "framer-motion": "^7.2.1",
     "gatsby": "^4.20.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
-    "gatsby-plugin-image": "^2.20.0",
+    "gatsby-plugin-image": "^2.21.0",
     "gatsby-plugin-postcss": "^5.20.0",
     "gatsby-plugin-react-svg": "^3.1.0",
-    "gatsby-plugin-sharp": "^4.20.0",
-    "gatsby-source-filesystem": "^4.20.0",
-    "gatsby-transformer-sharp": "^4.20.0",
+    "gatsby-plugin-sharp": "^4.21.0",
+    "gatsby-plugin-smoothscroll": "^1.2.0",
+    "gatsby-plugin-transition-link": "^1.20.5",
+    "gatsby-source-filesystem": "^4.21.1",
+    "gatsby-source-strapi": "^2.0.0",
+    "gatsby-transformer-remark": "^5.21.0",
+    "gatsby-transformer-sharp": "^4.21.0",
+    "gsap": "^3.11.0",
     "postcss": "^8.4.16",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
