--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby": "^4.20.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^2.21.0",
+    "gatsby-plugin-mailgo": "^0.12.2",
     "gatsby-plugin-postcss": "^5.20.0",
     "gatsby-plugin-react-svg": "^3.1.0",
     "gatsby-plugin-sharp": "^4.21.0",
@@ -32,6 +33,7 @@
     "gatsby-transformer-remark": "^5.21.0",
     "gatsby-transformer-sharp": "^4.21.0",
     "gsap": "^3.11.0",
+    "lottie-react": "^2.3.1",
     "postcss": "^8.4.16",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
