--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "postcss": "^8.4.16",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "resize-observer-polyfill": "^1.5.1",
     "tailwindcss": "^3.1.8"
   }
 }
